--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="exit">exit</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_main333">Main333Activity</string>
+    <string name="new_document">Новый документ</string>
+    <string name="back">Назад</string>
+    <string name="save">Сохранить</string>
+    <string name="add_task">Добавить</string>
 </resources>
