--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,11 @@
     <string name="no">No</string>
     <string name="updatingReport">Updating Report</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="exit">exit</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_main333">Main333Activity</string>
     <string name="new_document">Новый документ</string>
     <string name="back">Назад</string>
     <string name="save">Сохранить</string>
     <string name="add_task">Добавить</string>
+    <string name="exit">Выход</string>
 </resources>
