--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="delete">Удалить</string>
     <string name="confirm_delete">Вы действительно хотетие удалить эту заметку?</string>
     <string name="cancel">Отмена</string>
+    <string name="empty_list">(заметок нет)</string>
+
 </resources>
