Добавил нормальный интерфейс в окно заметки, подключил сохранение заметок при выходе из программы. Не работает удаление файла при удалении заметки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="confirm_delete">Вы действительно хотетие удалить эту заметку?</string>
     <string name="cancel">Отмена</string>
     <string name="empty_list">(заметок нет)</string>
-
+    <string name="prompt_title">Заголовок</string>
+    <string name="prompt_text">Примечания</string>
 </resources>
