Исправил большую погрешность в геопозиции; добавил доступ к заметке

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,8 @@
     <string name="prompt_text">Примечания</string>
     <string name="title_activity_maps">Map</string>
     <string name="geolocation">Геолокация</string>
+    <string name="access">Доступ</string>
+    <string name="public_access">Открытый</string>
+    <string name="private_access">Закрытый</string>
+
 </resources>
