Добавил аторизацию через Google аккаунт

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,5 @@
     <string name="access">Доступ</string>
     <string name="public_access">Открытый</string>
     <string name="private_access">Закрытый</string>
-
+    <string name="server_client_id">1053947145143-a48i1jsgtquna5vc5t9di1eopes4snp8.apps.googleusercontent.com</string>
 </resources>
