--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">First_task_k__r__o__s__h</string>
+    <string name="app_name">Discover</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -9,7 +9,7 @@
     <string name="title_activity_login">Sign in</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -47,4 +47,8 @@
     <string name="picture">Picture</string>
     <string name="select_intro">Long-press a thumbnail to add an image</string>
     <string name="show_intro">Press a thumbnail to display at larger size</string>
+    <string name="create_acco">Create account</string>
+    <string name="discover">Discover</string>
+    <string name="username">Username</string>
+
 </resources>
