--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,12 @@
     <string name="create_acco">Create account</string>
     <string name="discover">Discover</string>
     <string name="username">Username</string>
+    <string name="title_activity_help">HelpActivity</string>
+    <string name="title_user">User</string>
+    <string name="title_map">Map</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_support">Support</string>
+    <string name="title_phone_book">Phone book</string>
+
 
 </resources>
