--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,8 +35,9 @@
     <string name="confirm_delete">Вы действительно хотетие удалить эту заметку?</string>
     <string name="cancel">Отмена</string>
     <string name="empty_list">(заметок нет)</string>
-    <string name="prompt_title">Заголовок</string>
-    <string name="prompt_text">Примечания</string>
+    <string name="prompt_title">Title</string>
+    <string name="prompt_text">Description</string>
+    <string name="prompt_location">Location</string>
     <string name="title_activity_maps">Map</string>
     <string name="geolocation_global">Глобальная карта</string>
     <string name="geolocation_local">Локальная карта</string>
@@ -56,6 +57,8 @@
     <string name="title_settings">Settings</string>
     <string name="title_support">Support</string>
     <string name="title_phone_book">Phone book</string>
-
-
+    <string name="new_post">New post</string>
+    <string name="add_media">Add media </string>
+    <string name="number_of_video">Number of video </string>
+    <string name="number_of_photo">Number of photo </string>
 </resources>
