--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
     <!-- Strings related to login -->
-    <string name="prompt_user_name">UserName</string>
-    <string name="prompt_password">Password</string>
+
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_user_name">This user name is invalid</string>
@@ -44,19 +43,22 @@
     <string name="access">Доступ</string>
     <string name="public_access">Открытый</string>
     <string name="private_access">Закрытый</string>
+
     <string name="server_client_id">1053947145143-a48i1jsgtquna5vc5t9di1eopes4snp8.apps.googleusercontent.com</string>
+
     <string name="picture">Picture</string>
     <string name="select_intro">Long-press a thumbnail to add an image</string>
     <string name="show_intro">Press a thumbnail to display at larger size</string>
-    <string name="create_acco">Create account</string>
+
     <string name="discover">Discover</string>
-    <string name="username">UserName</string>
+
     <string name="title_activity_help">HelpActivity</string>
     <string name="title_user">User</string>
     <string name="title_map">Map</string>
     <string name="title_settings">Settings</string>
     <string name="title_support">Support</string>
     <string name="title_phone_book">Phone book</string>
+
     <string name="new_post">New post</string>
     <string name="add_media">Add media </string>
     <string name="number_of_video">Number of video </string>
@@ -66,4 +68,20 @@
     <string name="facebook_application_id">2016835455060975</string>
     <string name="fb_login_protocol_scheme">fb2016835455060975</string>
 
+
+
+    <string name="prompt_user_name">UserName</string>
+    <string name="prompt_password">Password</string>
+    <string name="create_acco">Create account</string>
+    <string name="username">UserName</string>
+    <string name="russian">Russian</string>
+    <string name="english">English</string>
+    <string name="login">Login</string>
+    <string name="edit_post_">Edit post</string>
+    <string name="delete_post">Delete post</string>
+    <string name="share_post">Share post</string>
+    <string name="report">Report</string>
+    <string name="info">Info</string>
+    <string name="media">Media</string>
+    <string name="edit_post_for_note">Edit post</string>
 </resources>
