--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="info">Info</string>
     <string name="media">Media</string>
     <string name="edit_post_for_note">Edit post</string>
+    <string name="error_incorrect_login_password">This login/password is incorrect</string>
 </resources>
